[gd_scene load_steps=10 format=3 uid="uid://mmef2mpya28q"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_2k65g"]
[ext_resource type="Texture2D" uid="uid://cyml0uhimyihy" path="res://Sprites/Player.png" id="2_bw3xp"]
[ext_resource type="Texture2D" uid="uid://di3bcqrs6w5rt" path="res://Sprites/PlayerShadow.png" id="2_fitug"]
[ext_resource type="Script" path="res://Prefabs/PlayerAreaScript.gd" id="4_8cylo"]
[ext_resource type="Texture2D" uid="uid://cf3f5pm8lna6i" path="res://Sprites/LightSource.png" id="6_euxaj"]

[sub_resource type="Animation" id="Animation_bc0ly"]
resource_name = "PlayerRun"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_w71pi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6e8gx"]
_data = {
"PlayerRun": SubResource("Animation_bc0ly"),
"RESET": SubResource("Animation_w71pi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkuos"]
size = Vector2(42, 32)

[node name="Player" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
scale = Vector2(0.5, 0.5)
collision_layer = 9
collision_mask = 9
script = ExtResource("1_2k65g")

[node name="PointLight2D" type="PointLight2D" parent="Player"]
shadow_color = Color(0, 0, 0, 0.8)
texture = ExtResource("6_euxaj")
texture_scale = 2.92

[node name="Sprite2D2" type="Sprite2D" parent="Player"]
z_index = 1
texture_filter = 1
position = Vector2(0, 16)
scale = Vector2(2, 2)
texture = ExtResource("2_fitug")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
z_index = 1
texture_filter = 1
position = Vector2(-7.62939e-06, 0)
scale = Vector2(2, 2)
texture = ExtResource("2_bw3xp")
hframes = 4
frame = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PackedVector2Array(2, -22, 12, -20, 18, -12, 18, -2, 28, 12, 24, 20, 0, 28, -14, 26, -28, 18, -28, 14, -20, 10, -14, -14, -8, -20)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -3.8147e-06)
scale = Vector2(-1.37007, 0.384092)
zoom = Vector2(14, 14)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 1.62

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_6e8gx")
}

[node name="DoorArea" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 2
script = ExtResource("4_8cylo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/DoorArea"]
position = Vector2(1, -6)
shape = SubResource("RectangleShape2D_pkuos")

[node name="KeyArea" type="Area2D" parent="Player"]
collision_layer = 4
collision_mask = 4
script = ExtResource("4_8cylo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/KeyArea"]
position = Vector2(1, -6)
shape = SubResource("RectangleShape2D_pkuos")

[node name="DamageArea" type="Area2D" parent="Player"]
collision_layer = 32
collision_mask = 32
script = ExtResource("4_8cylo")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player/DamageArea"]
position = Vector2(0, -2)
polygon = PackedVector2Array(2, -22, 16, -14, 18, -2, 28, 14, 26, 26, 0, 28, -26, 24, -14, -14)

[node name="AudioListener2D" type="AudioListener2D" parent="Player"]
scale = Vector2(2, 2)

[connection signal="body_entered" from="Player/DoorArea" to="Player" method="_on_door_area_body_entered"]
[connection signal="body_exited" from="Player/DoorArea" to="Player" method="_on_door_area_body_exited"]
[connection signal="body_entered" from="Player/KeyArea" to="Player" method="_on_key_area_body_entered"]
[connection signal="body_entered" from="Player/DamageArea" to="Player" method="_on_damage_area_body_entered"]
